# runge-kutta.py

./: .clang-format  .gitignore  CMakeLists.txt  README.md  freq.py  list_imports.sh  main.py  pid.py  pyproject.toml  quantize_noise.py  quantizer.py  requirements.txt  rk.py  spr_dmp_simpy.py
examples/: README.md  data-analysis.py  spring-damping.py
examples/kalman/: alpha-beta-gamma.py
examples/noise/: noise-test.py  spring-damping-kalman-experiment.py  spring-damping-kalman.py  spring-damping-noise-analysis.py  spring-damping-noise.py  spring-damping-plot.py
examples/pid/: analog-pid-test.py  spring-damping-pid-test.py  xiong-pid-plot.py  xiong-pid-test.py
examples/spring-damping/: README.md  spring-damping-compare.py  spring-damping-experiment.py  spring-damping-fitting.py  spring-damping-further-experiments.py  spring-damping-multi-Q-experiments.py  spring-damping-multi-k-experiments.py  spring-damping-plot.py  spring-damping-simulation.py
examples/xiong-2018/: main.py  plot.py
kalman/: kalman.py
module/: .gitignore  __init__.py  base.py  elec_feedback.py  noise.py  pid.py  speed_up_test.py  spring_damping.py  system.py
module/_native/: CMakeLists.txt  core.cpp
module/backend/: .gitignore  README.md  __init__.py  setup.py
module/backend/inc/: common.h  spring_damping.h  test.h
module/backend/src/: spring_damping.cpp  test.cpp
module/tests/: spring_damping_backend_test.py  test_noise.py
parameters/: default-noise.json  default-pid.json  default.json  default.yaml  ion-mems.json  xiong-2018.json
util/: __init__.py  analysis.py  freq.py  parameters.py  plot.py  signal.py  util.py
util/tests/: param-test.py  test-param.json
